--- a/style-home.css
+++ b/style-home.css
@@ -6,7 +6,7 @@ body{
   margin: 0;
   padding: 0;
 }
-.wrap, .wrap2, .wrap3{
+.wrap{
   display:flex;
   justify-content: center;
   width:auto;
@@ -14,7 +14,7 @@ body{
 
 .text{
   position:absolute;
-  margin-top: 15%;
+  /* margin-top: 15%; */
   width: 100px;
   /* border-radius:20px; */
 }
@@ -22,16 +22,7 @@ body{
   width:100px;
   display: block;
 }
-.line img{
-  width:100px;
-  display:block;
-  transform: rotate(15deg);
-}
-.line{
-  position:absolute;
-  margin-top: 15%;
-  /* border-radius:20px; */
-}
+
 
 /* .button{
   z-index: 1000;
