--- a/style-home.css
+++ b/style-home.css
@@ -7,10 +7,11 @@ body{
   padding: 0;
 }
 .wrap{
-  display:flex;
+  display:block;
   justify-content: center;
   width:auto;
 }
+
 
 .text{
   position:absolute;
@@ -21,30 +22,3 @@ body{
 .text img{
   width:100px;
 }
-
-/* .button{
-  z-index: 1000;
-  margin-left: 32%;
-  margin-top: 10%;
-  position: absolute;
-} */
-/* #dot{
-  /* position: fixed; */
-  /* width: 150px;
-} */
-/* #ling{
-  margin-top: 150%;
-  margin-left: -70%;
-}
-#zhong{
-  margin-top: 300%;
-  margin-left: 70%;
-}
-#she{
-  margin-top: 415%;
-  margin-left: 10%;
-}
-#ji{
-  margin-top: 410%;
-  margin-left: 120%;
-} */
