--- a/style-home.css
+++ b/style-home.css
@@ -6,8 +6,14 @@ body{
   margin: 0;
   padding: 0;
 }
+
+@-webkit-keyframes fontchange
+{
+from {width: 10px;}
+to {opacity: 100px;}
+}
 .wrap{
-  display:block;
+  display:flex;
   justify-content: center;
   width:auto;
 }
@@ -15,10 +21,12 @@ body{
 
 .text{
   position:absolute;
+
   /* margin-top: 15%; */
   width: 100px;
   /* border-radius:20px; */
 }
 .text img{
+  /* -webkit-animation: fontchange 1s; */
   width:100px;
 }
